--- a/TaxaJurosAPI/Dockerfile
+++ b/TaxaJurosAPI/Dockerfile
@@ -13,4 +13,6 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1
 WORKDIR /app
 COPY --from=build-env /app/out .
+EXPOSE 443/tcp
+EXPOSE 80/tcp
 ENTRYPOINT ["dotnet", "TaxaJurosAPI.dll"]
